--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,12 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
+#orbs:
+#  node: circleci/node@1.1.6
 jobs:
   build-and-test:
+    docker:
+      - image:  circleci/node:12
+      environment:
+        CHROME_BIN: /usr/bin/google-chrome
     executor:
       name: node/default
     steps:
