--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,41 @@
 version: 2
-jobs:
-  build:
-    working_directory: ~/angular-jozi-js
-    docker:
-      - image: circleci/node:8-browsers
-    steps:
-      - checkout
-      - restore_cache:
-          key: AngularCircleCI-{{ .Branch }}-{{ checksum "package.json" }}
-      - run: npm install
-      - save_cache:
-          key: AngularCircleCI-{{ .Branch }}-{{ checksum "package.json" }}
-          paths:
-            - "node_modules"
-      - run: xvfb-run -a npm run test -- --single-run --no-progress --browser=ChromeNoSandbox
-      - run: xvfb-run -a npm run e2e -- --no-progress --config=protractor-ci.conf.js
+
+  jobs:
+    # The test job
+    test:
+      working_directory: ~/project-name
+      docker:
+        - image: circleci/node:10-browsers
+      steps:
+        # Checkout the code from the branch into the working_directory
+        - checkout
+        # Log the current branch
+        - run:
+            name: Show current branch
+            command: echo ${CIRCLE_BRANCH}
+        # Restore local dependencies from cache
+        - restore_cache:
+            keys:
+              - v1-dependencies-{{ checksum "package-lock.json" }}
+              - v1-dependencies-
+        # Install project dependencies
+        - run:
+            name: Install local dependencies
+            command: npm install
+        # Cache local dependencies if they don't exist
+        - save_cache:
+            key: v1-dependencies-{{ checksum "package-lock.json" }}
+            paths:
+              - node_modules
+        # Lint the source code
+        - run:
+            name: Linting
+            command: npm run lint
+        # Test the source code
+        - run:
+            name: Testing
+            command: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+        # End to End test
+        - run:
+            name: End to End Test
+            command: npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
