--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,3 +20,7 @@ jobs:
       - run:
           name: Unit Test
           command: npm run ng test -- --watch=false --code-coverage
+       - run:
+          name: Coveralls
+          command: cat ./coverage/angular-jozi-js/lcov.info  | ./node_modules/coveralls/bin/coveralls.js
+
